# CoolKinectVrThingy

./: Cargo.toml  build.rs  post-build.sh
libs/NiTE-Linux-x64-2.2/: NiTEDevEnvironment
libs/NiTE-Linux-x64-2.2/Documentation/: _ni_t_e_8h.html  _ni_t_e_8h_source.html  _nite_c_types_8h.html  _nite_c_types_8h_source.html  _nite_enums_8h.html  _nite_enums_8h_source.html  annotated.html  classes.html  classnite_1_1_array-members.html  classnite_1_1_array.html  classnite_1_1_bounding_box-members.html  classnite_1_1_bounding_box.html  classnite_1_1_gesture_data-members.html  classnite_1_1_gesture_data.html  classnite_1_1_hand_data-members.html  classnite_1_1_hand_data.html  classnite_1_1_hand_tracker-members.html  classnite_1_1_hand_tracker.html  classnite_1_1_hand_tracker_1_1_new_frame_listener-members.html  classnite_1_1_hand_tracker_1_1_new_frame_listener.html  classnite_1_1_hand_tracker_frame_ref-members.html  classnite_1_1_hand_tracker_frame_ref.html  classnite_1_1_ni_t_e-members.html  classnite_1_1_ni_t_e.html  classnite_1_1_plane-members.html  classnite_1_1_plane.html  classnite_1_1_point3f-members.html  classnite_1_1_point3f.html  classnite_1_1_pose_data-members.html  classnite_1_1_pose_data.html  classnite_1_1_quaternion-members.html  classnite_1_1_quaternion.html  classnite_1_1_skeleton-members.html  classnite_1_1_skeleton.html  classnite_1_1_skeleton_joint-members.html  classnite_1_1_skeleton_joint.html  (+40 more)
libs/OpenVRDriver/: ControllerDriver.cpp  ControllerDriver.h  CoolKinectVrThingy.h  Wrapper.hpp
src/: NiTE.rs  main.rs  nite4vr.rs
src/NiTE/: OpenNI.rs
(+138 files in other folders)
