[package]
name = "CoolKinectVrThingy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nite2-sys = "0.2.0"

[build]
rustflags = ["-C link-args=-Wl","-rpath","/home/yashr/Documents/CoolKinectVrThingy/libs/"]
