[package]
name = "CoolKinectVrThingy"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "CoolKinectVrThingy"
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
termios = "0.3.3"
libc = "0.2.98"
libc-stdhandle = "0.1.0"

[dependencies.pyo3]
version = "0.14.1"
features = ["auto-initialize"]